objects/Bank_DayEndBalanceRecords_Archive__b.object
<CustomObject>
    <fields>
        <fullName>BankEndDayBalance__c</fullName>
        <label>BankEndDayBalance</label>
        <referenceTo>Bank_DayEndBalances__c</referenceTo>
        <relationshipLabel>Bank DayEndBalanceRecords Archive Relationship</relationshipLabel>
        <relationshipName>Bank_DayEndBalanceRecords_Archive_Rel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>balance__c</fullName>
        <label>balance</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datex__c</fullName>
        <label>datex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank_DayEndBalanceRecords_Archive</label>
    <pluralLabel>Bank DayEndBalanceRecords Archive</pluralLabel>
</CustomObject>